@@ -1,5 +1,8 @@
 2014-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* contrib/iptcutil/iptcutil.c: Fix warnings about variables set
+	but not used.
+
 	* tools/tiffgt.c: Fix warnings about unused parameters.
 
 	* libtiff/tif_stream.cxx: Fix warnings about unused parameters.
